adding reconnecting websocket, adding fulldepth loading
Change-Id: I6a11f79aa52175950d534a69e2266d7f3e766c4a

--- a/static_assets/html/index.html
+++ b/static_assets/html/index.html
@@ -9,6 +9,7 @@
     <script src="js/bootstrap.js"></script>
     <script src="js/bootstrap-tabs.js"></script>
     <script src="js/buzz.js"></script>
+    <script src="js/reconnecting-websocket.js"></script>
 
     <!-- from http://google-code-prettify.googlecode.com 
     <script src="js/run_prettify.js"></script> -->
@@ -66,7 +67,7 @@
     <div class="container">
       <div class="hero-unit">
         <h1>Btc Whale Watch</h1>
-        <p>The whales know.</p>
+        <p>Freenode IRC #btcwhalewatch</p>
         <p>
           <a class="btn btn-primary btn-large">
           Player1 insert satoshi:
@@ -85,7 +86,7 @@
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="git">
-          <canvas id="cells" width="1920" height="1080"></canvas>
+          <canvas id="cells" width="1420" height="1080"></canvas>
         </div>
         <div class="tab-pane" id="logs"></div>
         <div class="tab-pane" id="sightings"></div>
