--- a/static_assets/html/index.html
+++ b/static_assets/html/index.html
@@ -100,6 +100,6 @@
      
     </script>
 
-    <script src="/ami-agents.js" type="text/javascript" charset="utf-8"></script>
+    <script src="/btcww.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
