--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -42,7 +42,7 @@
                                    <link rel="shortcut icon" href="../assets/ico/favicon.png">
   </head>
   <style type="text/css">
-    #cells{ background:url(/sprites/tex_Water.jpg) }
+    #cells{ background:url(http://s3.amazonaws.com/goxwhales/static_assets/sprites/tex_Water.jpg) }
   </style>
   <body>
 
@@ -100,6 +100,6 @@
      
     </script>
 
-    <script src="/btcww.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/btcww.js" type="text/javascript" charset="utf-8"></script>
   </body>
 </html>
