--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -78,11 +78,15 @@
         </p>
       </div> 
       <div id="wizard"></div>
+      <p>
+      <p>05/16/2013: Audio alert changed.  Alert now triggers on whale action >=375 BTC on the 15 minute.</p>
+      <p>05/15/2013: Fake walls added.  Calculated by volume and price match being added and removed more than 2x.</p>
+      </p>
 
       <ul class="nav nav-tabs">
         <li class="active tab-pane" data-toggle="tab" data-target="#git"><a href="#git">Status</a></li>
-        <li class="tab-pane" data-toggle="tab" data-target="#logs"><a href="#logs">Activity</a></li>
-        <li class="tab-pane" data-toggle="tab" data-target="#sightings"><a href="#sightings">Sightings</a></li>
+        <li class="tab-pane" data-toggle="tab" data-target="#logs"><a href="#logs">Alerts</a></li>
+        <li class="tab-pane" data-toggle="tab" data-target="#sightings"><a href="#sightings">Activity</a></li>
       </ul>
       <div class="tab-content">
         <div class="tab-pane active" id="git">
