more faq fixing and spelling
Change-Id: Ie3ec3775a6793da9088d065e15d4bc181a0b7b78

--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -94,7 +94,7 @@
         <div class="tab-pane" id="dafuq">
           <h2>FAQ</h2>
           <p>Q:  What the frak is this!?</p>
-          <p>A:  Btc Whale Watch is a Clustersense project.  Clustersense is all about providing APIs and displaying data in real-time using websockets technology.</p>
+          <p>A:  Btc Whale Watch is a Clustersense project.  Clustersense is all about providing APIs and displaying data in real-time using websocket technology.</p>
           <p>Q:  Ok, but what the frak is whales.clustersense.com displaying?</p>
           <p>A:  The status display renders data that we flag as interesting.  Currently displaying:</p>
           <ul>
@@ -109,6 +109,7 @@
           <p>A:  Sure!  If you have feedback or ideas come talk them over on IRC @freenode.net #btcwhalewatch</p>
 
           <h2>News</h2>
+          <p>05/17/2013: Player count added.  Display of Btc Whale Watch connected players.</p>
           <p>05/16/2013: Audio alert changed.  Alert now triggers on whale action >=375 BTC on the 15 minute.</p>
           <p>05/15/2013: Fake walls added.  Calculated by volume and price match being added and removed more than 2x.</p>
         </div>
