--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -69,11 +69,11 @@
         <h1>Btc Whale Watch</h1>
         <p>Freenode IRC #btcwhalewatch</p>
         <p>
-          <a class="btn btn-primary btn-large">
+          <a class="btn btn-primary btn-large" href="https://blockchain.info/address/1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A">
           Player1 insert satoshi:
           </a>
-          <a class="btn btn-primary btn-large">
-          1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A
+          <a class="btn btn-primary btn-large" href="https://blockchain.info/address/1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A">
+          1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A (enable donation mode)
           </a>
         </p>
       </div> 
