reword more index.html
Change-Id: I4cf79093fc8713717da16313cdf9ba15a2b933ca

--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -104,7 +104,7 @@
           <p>Q:  Why do I give a frak about this?</p>
           <p>A:  By watching the whales and determining the patterns in their trading we hope to glean valuable real-time trading information.</p>
           <p>Q:  Why does it take so fraking long to load?</p>
-          <p>A:  Because it is event based.  To save on bandwidth the site ONLY sends websocket data when something changes.  On a busy day this is quick.  On a slow day this is slow.  If you hate this, please donate!  I can up the refresh rate until our eyes bleed.
+          <p>A:  Because it is event based and you must wait for the next event.  Think of this as the refresh-rate of the site.  Staying connected is easy thanks to a re-connecting websocket cross-browser plugin.  You will receive the events in real-time by simply keeping your browser tab open.  To save on bandwidth the site ONLY sends websocket data when something changes.  On a busy day this is quick.  On a slow day this is slow.</p>
           <p>Q:  Can we get some better data and cooler looking displays?</p>
           <p>A:  Sure!  If you have feedback or ideas come talk them over on IRC @freenode.net #btcwhalewatch</p>
 
