Adding link to oss project
Change-Id: Ie03e51c0594cd24175a516442454258c55ecebc7

--- a/static_assets/index.html
+++ b/static_assets/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="hero-unit">
         <h1>Btc Whale Watch</h1>
-        <p>Freenode IRC #btcwhalewatch</p>
+        <p>Freenode IRC ##49whales</p>
         <p>
           <a class="btn btn-primary btn-large" href="https://blockchain.info/address/1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A">
           Player1 insert satoshi:
@@ -75,6 +75,7 @@
           <a class="btn btn-primary btn-large" href="https://blockchain.info/address/1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A">
           1BtXe2sp21sSZBRTBHnSKZEQU1HRNwGD1A (enable donation mode)
           </a>
+          <a class="btn btn-primary btn-small" href="http://github.com/jeremyd/goxwhales">Now OpenSource on github!  Please help us improve BTC Whale Watch by running your own server and contributing! (click here for details)</a>
         </p>
       </div> 
       <div id="wizard"></div>
